# uwallet

./: CMakeLists.txt  README.md
doc/: NOTES  mbed_notes
include/uwallet/: base.h  hdkeys.h
include/uwallet/hdkeys/: wordlists-config.h  wordlists.h
lib/mbedtls/: CMakeLists.txt  config_uwallet.h  mbed_sources.cmake  out.c
lib/orig/: mbedtls-2.14.0-apache.tgz
scripts/hdkeys/: wordlists2c.py
src/: CMakeLists.txt
src/base/: CMakeLists.txt  base.c
src/hdkeys/: CMakeLists.txt  mnemonic.c  wordlists.c
src/wrappers/: CMakeLists.txt  pbkdf2_hmac_sha512.c  pbkdf2_hmac_sha512.h  sha256.c  sha256.h
test/: CMakeLists.txt  hello.c
